--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "admin-lte": "^3.0",
         "axios": "^0.19",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0.3",
+        "jquery": "^3.2",
         "laravel-mix": "^6.0.39",
         "lodash": "^4.17.19",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
